--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
       build: 
         context: .
         dockerfile: Dockerfile
+      command: --check-caps false
       restart: always
       ports: 
         - 1972:1972
